[metadata]
name = cellrefiner
version = 0.0.1
description = Reconstruct single-cell resolution from spatial transcriptomics.
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    anndata>=0.9.2
    gudhi==3.11.0
    networkx>=3.1
    numba>=0.58.1
    numpy>=1.24.4
    pandas>=2.0.3
    POT==0.9.5
    scanpy>=1.9.8
    scikit-learn>=1.3.2
    scipy>=1.10.1
    torch>=2.4.1
    torch-geometric>=2.6.1
    tqdm>=4.67.1

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
cupy =
    cupy-cuda12x>=13.6.0

[options.packages.find]
exclude =
    tests*
    docs*
    tutorials*